# NovelScript-AI

./: .gitignore  Agent.md  PRODUCT.md  README.md
code/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
code/backend/app/: __init__.py  main.py
code/backend/app/api/: auth.py  conversations.py  errors.py  evidence.py  exports.py  projects.py  runs.py  scene_plan.py  scripts.py  style_source.py  style_uploads.py  uploads.py
code/backend/app/core/: config.py  database.py  paths.py
code/backend/app/domain/: __init__.py  artifacts.py  budgets.py  checkpoints.py  conversations.py  evidence.py  memory.py  projects.py  runs.py  schemas.py  scripts.py  style.py  traceability.py
code/backend/app/models/: __init__.py  analysis.py  chapter.py  checkpoint.py  export.py  feedback_plan_cache.py  project.py  repair.py  runtime.py  scene_plan.py  script.py  story.py  style.py  user.py
code/backend/app/services/: analysis_worker_service.py  artifact_service.py  auth_service.py  chapter_persistence_service.py  chapter_service.py  checkpoint_service.py  context_budget_service.py  conversation_service.py  developer_log_service.py  document_conversion_service.py  evidence_service.py  export_job_service.py  export_service.py  feedback_plan_cache_service.py  input_adapter.py  llm_provider.py  local_snapshot_service.py  local_store.py  memory_service.py  orchestrator_service.py  project_service.py  prompt_package_service.py  run_service.py  scene_plan_service.py  script_service.py  store.py  (+6 more)
code/backend/migrations/: env.py
code/backend/tests/: conftest.py
(+122 files in other folders)
